# dgl-adapter

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: analyze.yml  build.yml  release.yml
adbdgl_adapter/: __init__.py  abc.py  adapter.py  controller.py  encoders.py  exceptions.py  main.py  setup.py  typings.py  utils.py
adbdgl_adapter/adbdgl_adapter/: abc.py  adbdgl_adapter.py  adbdgl_controller.py
adbdgl_adapter/tests/: conftest.py  test_adbdgl_adapter.py
examples/: ArangoDB_DGL_Adapter.ipynb
examples/outputs/: ArangoDB_DGL_Adapter_output.ipynb
scripts/: extract_version.py
tests/: conftest.py  test_adapter.py
